--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Unit 1 Project</title>
+    <title>Amir's Halloween Costume Idea's</title>
   </head>
   <body>
     <style>
